# minitrader

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_strategies.py  0003_seed_more_builtins.py  0004_multi_exchange.py  0005_market_sentiment.py  0006_app_settings.py  0007_trading_intelligence.py  0008_user_admin_approval.py  0009_signal_order_indexes.py  0010_order_journal_fields.py  0011_ai_evaluations.py  0012_ibkr_multi_currency.py
backend/app/: config.py  main.py  security.py  settings_store.py
backend/app/ai/: __init__.py  catalog.py  context.py  openrouter.py  prompts.py
backend/app/api/: admin.py  ai_eval.py  exchanges.py  execution.py  integrations.py  internal.py  journal.py  klines.py  news.py  orders.py  portfolio.py  positions.py  risk_tools.py  sentiment.py  settings.py  settings_ai.py  signals.py  strategies.py  watchlist.py
backend/app/auth/: deps.py  jwt.py  routes.py
backend/app/backtest/: runner.py
backend/app/brokers/: base.py  binance.py  bybit.py  exness.py  exness_universe.yaml  factory.py  ibkr.py  ibkr_universe.yaml  okx.py
backend/app/data/: _sentiment.py  _symbols.py  binance_stream.py  calendar.py  cryptocompare.py  cryptopanic.py  feargreed.py  finnhub.py  gdelt.py  instruments_refresh.py  news_worker.py  newsdata.py  reddit_hype.py  redis_io.py  yahoo.py
backend/app/data/streams/: dedupe.py  endpoints.py  exchange_stream.py  manager.py
backend/app/db/: models.py  session.py  symbols.py
backend/app/execution/: __init__.py  router.py
backend/app/indicators/: extra.py  ta.py
backend/app/keys/: crypto.py  routes.py  store.py
backend/app/optimizer/: __init__.py  walk_forward.py
backend/app/orders/: executor.py  fill_stream.py  rounding.py  tracker.py
backend/app/portfolio/: __init__.py  rebalancer.py
backend/app/risk/: checks.py
backend/app/scenario/: __init__.py  simulator.py
backend/app/signals/: engine.py  schema.py  worker.py
backend/app/signals/dsl/: evaluator.py  loader.py  market_ctx.py  schema.py
backend/app/signals/dsl/builtins/: abely_scalper.yaml  (+10 more)
backend/app/telegram/: bot.py
backend/app/ws/: live.py
backend/tests/: conftest.py  test_backtest.py  test_dsl_evaluator.py  test_dsl_loader.py  test_extra_indicators.py  test_ibkr_helpers.py  test_indicators.py  test_keys_crypto.py  test_risk.py  test_signal_engine.py  test_trading_intelligence.py
(+54 files in other folders)
