[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trader-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "ccxt>=4.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "python-telegram-bot[job-queue]>=21.4",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "pyjwt>=2.9",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "slowapi>=0.1.9",
    "cachetools>=5.3",
    "ib_insync>=0.9.86",
    # Exness/MT5: pure-Python RPyC transport for the mt5linux client. The
    # `mt5linux` client itself is installed --no-deps in the Dockerfile so it
    # doesn't drag the Windows-only `MetaTrader5` wheel into the Linux image
    # (that runs in the mt5gateway sidecar under Wine).
    # Pinned to match the rpyc the mt5linux server runs in the mt5gateway
    # Wine python (5.2.3). rpyc 5.x/6.x wire protocols are incompatible.
    "rpyc==5.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
